                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 20-06-2005 fixed: mem leak in mp3 tag loader
 - 20-06-2005 fixed: audiomanager (nav sounds) could crash on an invalid wav file
 - 20-06-2005 added: replay gain support for aaccodec (aaccodec.dll in system\players\paplayer was updated)
 - 20-06-2005 updated: Spanish language file (Thnx to unknown)
 - 20-06-2005 updated: Korean language file (Thnx to AkoXko)
 - 20-06-2005 updated: Italian language file (Thnx to kotix)
 - 20-06-2005 updated: German language file
 - 20-06-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 20-06-2005 updated: Finnish language file (Thnx to jutski)
 - 20-06-2005 updated: Norwegian language file (Thnx to vnm)
 - 20-06-2005 updated: [ 1215375 ] Newest BiosIDs.ini (Thnx to bubbadood)
 - 16-06-2005 changed: 'the' is ignored during sorting in my videos as well.
 - 16-06-2005 added: aac codec for paplayer (needs aaccodec.dll in system\players\paplayer)
 - 16-06-2005 added: Startup Window now setable via GUI! Systeminfo - Appearance - Look and Feel - Startup Window! [GeminiServer]
                     It will set the XBMC Startup Window [Manual Settings, Home, Programms, Pictures, Music, Videos, Music, ] default it Home Window!
                     Manual Settings will not touch the Settings and you can define your own Startwindow in xbmc xml.
 - 16-06-2005 fixed: sf.net Bug [1220193]. if Date and Time Set Hour is 0 (24), it will add. + 1day [GeminiServer]
 - 14-06-2005 fixed: home.xml, urlset was 0, changed to 1, RSS should work now again
 - 14-06-2005 changed: Milkdrop - now renders with correct aspect ratio.